--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-pandas==2.1.3
-numpy==1.24.4
-pandasai
+pandas==2.2.2
+numpy==1.26.4
 matplotlib
 scikit-learn
+pandasai==1.5.12
 openai
+python-dotenv
