--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit
-pandas==1.5.3
+pandas==2.2.2
 numpy==1.26.4
 matplotlib
-scikit-learn
-pandasai==1.5.12
+scikit-learn==1.3.2
+pandasai==2.0.24
 openai
 python-dotenv
+
 
