--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
+streamlit==1.25.0
 pandas==2.2.2
 numpy==1.26.4
-matplotlib
+matplotlib==3.8.4
 scikit-learn==1.3.2
 pandasai==2.0.24
-openai
+openai==1.12.0
 python-dotenv
 
 
