--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.25.0
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.4
+streamlit==1.44.1
+pandas==1.5.3
+numpy==1.24.4
+matplotlib==3.7.3
 scikit-learn==1.3.2
-pandasai==2.0.24
-openai==1.12.0
-python-dotenv
+openai==1.13.3
+pandasai==1.5.12
+python-dotenv==1.0.1
 
 
