--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.44.1
-pandas==1.5.3
-numpy==1.24.3
-matplotlib==3.7.3
-scikit-learn==1.2.2
-openai==1.13.3
-pandasai==1.5.12
-python-dotenv==1.0.1
+streamlit
+pandas
+numpy
+matplotlib
+scikit-learn
+openai
+pandasai
+python-dotenv
 
 
 
